package com.dmm.bootcamp.yatter2025.ui.post.bindingmodel

data class PostBindingModel(
    val avatarUrl: String?,
    val yweetText: String,
)